<resources>
    <string name="app_name">SAVEUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding_1">מניעת התפשטות הקורונה היא <b>המטרה של כולנו</b>\n\nעכשיו תוכלו לסייע באופן אקטיבי \n<b>ובלי חשש לפגיעה בפרטיותכם</b></string>
    <string name="on_boarding_3"><b>התראה בזמן אמת</b> תתקבל במצב בו דווחתם על מיקומכם הנוכחי ויש עליו מידע מעודכן כאזור נגוע \n\n<b>התראה מתעדכנת</b>תתקבל כאשר אחד מהמקומות שדיוותם עליהם, בזמן אמת או בדיעבד, ידווח כאזור נגוע</string>
    <string name="login_2">הבריאות והבטחון שלכם נמצאים בעדיפות עליונה,\n אנחנו כאן לעזור לכם לעקוב אחר הפעילות ולתעד אותה.\n<b>כל המידע אנונימי לחלוטין, אין מה לחשוש .</b></string>
    <string name="login_edittext_name">שם</string>
    <string name="login_edittext_email">דואר אלקטרוני</string>
    <string name="login_edittext_phone">מספר טלפון</string>
    <string name="login_note_1">אני מאשר את</string>
    <string name="login_note_2"><u>התקנון</u></string>
    <string name="login_note_3">ואת</string>
    <string name="login_note_4"><u>תנאי השימוש</u></string>
    <string name="the_my_place">המקומות שלי</string>
    <string name="on_the_map">על המפה</string>
</resources>